@@ -1,3 +1,8 @@
+2025-05-30  Rubén Rubio  <rubenrub@ucm.es>
+
+	* tests/ResolvedBugs/stratToExprNotValidMay2025.maude:
+	added
+
 2025-05-06  Saruman the White  <eker@eker10>
 
 	* tests/ResolvedBugs/viewInstantiationByTheoryViewApril2025.maude:
